--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,11 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Install missing Android SDK packages
+        run: |
+          yes | sdkmanager "ndk;29.0.13846066"
+          yes | sdkmanager --licenses
+
       - name: Build Debug APK
         run: ./gradlew assembleDebug
 
