--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,23 +2,12 @@ name: Android CI
 
 on: [push, pull_request]
 
-env:
-  ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
-  PATH: /usr/local/lib/android/sdk/cmdline-tools/latest/bin:/usr/local/lib/android/sdk/platform-tools:/usr/local/bin:${PATH}
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      # Install essential tools first to avoid checkout errors
-      - name: Install basic tools
-        run: sudo apt-get update && sudo apt-get install -y tar unzip curl git
-
-      # Checkout the repository
       - uses: actions/checkout@v4
 
-      # Set up Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -26,45 +15,17 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
-      # Ensure Android SDK root exists
-      - name: Ensure Android SDK root exists
+      - name: Install Android SDK components
         run: |
-          sudo mkdir -p "$ANDROID_SDK_ROOT"
-          sudo chown -R "$(whoami)" "$ANDROID_SDK_ROOT"
+          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses
+          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "ndk;29.0.13846066" "platform-tools" "platforms;android-33"
 
-      # Install Android command-line tools if missing
-      - name: Install Android command-line tools
-        run: |
-          set -e
-          if [ ! -x "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager" ]; then
-            cd /tmp
-            curl -sSfL "https://dl.google.com/android/repository/commandlinetools-linux-latest.zip" -o cmdline-tools.zip
-            unzip -q cmdline-tools.zip
-            mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools/latest"
-            mv cmdline-tools/* "$ANDROID_SDK_ROOT/cmdline-tools/latest/"
-            rm -f cmdline-tools.zip
-          else
-            echo "cmdline-tools already installed"
-          fi
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
-      # Accept SDK licenses and install required packages
-      - name: Accept licenses & install SDK/NDK
-        run: |
-          set -e
-          sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --version
-          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" "platform-tools" "platforms;android-33" "build-tools;33.0.2"
-          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" "ndk;29.0.13846066"
-          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
-
-      # Grant execute permission for gradlew
-      - name: Grant execute permission
-        run: chmod +x ./gradlew
-
-      # Build the debug APK
       - name: Build Debug APK
-        run: ./gradlew assembleDebug --no-daemon
+        run: ./gradlew assembleDebug
 
-      # Upload the APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
